Added GitHub Repository URL

--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
         </div>
       </div>
     </div>
+    <a href="https://github.com/vanesasalamon/weather-app">GitHub Repository</a>
     <script>
       let now = new Date();
       let hours = now.getHours();
