--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
     <form id="search">
   <input type="search" id="city-input" placeholder="Search for a city">
 <button type="submit">Search</button>
-<button class="location-button" id="location-button">Locate me (℃)</button>
+<button class="location-button-celsius" id="location-button-celsius">Locate me (℃)</button>
+<button class="location-button-farenheit" id="location-button-farenheit">Locate me (℉)</button>
 </form>
 </br>
 
@@ -39,7 +40,7 @@
         <div class="card-body">
           <div class="card london">
             <div class="card-body">
-              <img class="londonpic" src="media/sun.svg" width="150" />
+              <img class="londonpic" id="icon-main" src="http://openweathermap.org/img/wn/10d@2x.png" width="150" />
               <h2>
                 <div><span id="searchedCity">---</span></div>
                 <span id="main-temperature">--- ℃</span></br>
@@ -118,15 +119,17 @@
       h3.innerHTML = `${day} | ${hours}:${minutes}`;
 
 function showTemperatureCelsius(response) {
-temperature = response.data.main.temp;
+temperature = Math.round(response.data.main.temp);
 let mainTemperature = document.querySelector("#main-temperature");
 mainTemperature.innerHTML = `${temperature} ℃`;
+let icon = document.querySelector("#icon-main");
+icon.setAttribute("src", `http://openweathermap.org/img/wn/${response.data.weather[0].icon}@2x.png`)
 }
 
 function changeDetailsCelsius(response) {
   let humidity = response.data.main.humidity;
-  let maximumTemperature = response.data.main.temp_max;
-  let minimumTemperature = response.data.main.temp_min;
+  let maximumTemperature = Math.round(response.data.main.temp_max);
+  let minimumTemperature = Math.round(response.data.main.temp_min);
   let temperatureRange = document.querySelector("#temperature-range")
   temperatureRange.innerHTML = `Temperature range: ${minimumTemperature}℃ - ${maximumTemperature}℃`;
 }
@@ -147,15 +150,15 @@ let search = document.querySelector("#search");
 search.addEventListener("submit", searching);
 
 function showTemperatureFarenheit(response) {
-temperature = response.data.main.temp;
+temperature = Math.round(response.data.main.temp);
 let mainTemperature = document.querySelector("#main-temperature");
 mainTemperature.innerHTML = `${temperature} ℉`;
 }
 
 function changeDetailsFarenheit(response) {
   let humidity = response.data.main.humidity;
-  let maximumTemperature = response.data.main.temp_max;
-  let minimumTemperature = response.data.main.temp_min;
+  let maximumTemperature = Math.round(response.data.main.temp_max);
+  let minimumTemperature = Math.round(response.data.main.temp_min);
   let temperatureRange = document.querySelector("#temperature-range")
   temperatureRange.innerHTML = `Temperature range: ${minimumTemperature}℉ - ${maximumTemperature}℉`;
 }
@@ -189,7 +192,7 @@ function findCity(response) {
   temperatureRange.innerHTML = `Temperature range: ${minimumTemperature}℃ - ${maximumTemperature}℃`;
 }
 
-function showTemperatureByLocation(position) {
+function showTemperatureByLocationCelsius(position) {
 let latitude = position.coords.latitude;
 let longitude = position.coords.longitude;
 let apiKey = "f2d265d56b2ea774781d6a6833201d0a";
@@ -197,12 +200,39 @@ let apiUrl = `https://api.openweathermap.org/data/2.5/weather?lat=${latitude}&lo
 axios.get(apiUrl).then(findCity);
 }
 
-function findLocation() {
-navigator.geolocation.getCurrentPosition(showTemperatureByLocation);
+function findLocationCelsius() {
+navigator.geolocation.getCurrentPosition(showTemperatureByLocationCelsius);
 }
 
-let locationButton = document.querySelector("#location-button");
-locationButton.addEventListener("click", findLocation);
+let locationButtonCelsius = document.querySelector("#location-button-celsius");
+locationButtonCelsius.addEventListener("click", findLocationCelsius);
+
+function findCityFarenheit(response) {
+  let currentCity = document.querySelector("#searchedCity");
+  let temperature = document.querySelector("#main-temperature");
+  let temperatureRange = document.querySelector("#temperature-range");
+  let maximumTemperature = response.data.main.temp_max;
+  let minimumTemperature = response.data.main.temp_min;
+  currentCity.innerHTML = response.data.name;
+  temperature.innerHTML = `${response.data.main.temp} ℉`;
+  
+  temperatureRange.innerHTML = `Temperature range: ${minimumTemperature}℉ - ${maximumTemperature}℉`;
+}
+
+function showTemperatureByLocationFarenheit(position) {
+let latitude = position.coords.latitude;
+let longitude = position.coords.longitude;
+let apiKey = "f2d265d56b2ea774781d6a6833201d0a";
+let apiUrl = `https://api.openweathermap.org/data/2.5/weather?lat=${latitude}&lon=${longitude}&appid=${apiKey}&units=imperial`;
+axios.get(apiUrl).then(findCityFarenheit);
+}
+
+function findLocationFarenheit() {
+  navigator.geolocation.getCurrentPosition(showTemperatureByLocationFarenheit);
+}
+
+let locationButtonFarenheit = document.querySelector("#location-button-farenheit");
+locationButtonFarenheit.addEventListener("click", findLocationFarenheit);
     </script>
   </body>
 </html>
