--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
           </div>
           <div class="weather-forecast" id="weather-forecast"> 
             <div class="container">
-              <div class="card dayone">
+              <div class="card forecast-card">
                 <img class="picdayone" src="media/sun.svg" width="50" />
                 <h5>
                   <div>Tomorrow</div>
@@ -85,27 +85,47 @@
       let h3 = document.querySelector("h3");
       h3.innerHTML = `${day} | ${hours}:${minutes}`;
 
-function displayForecast () {
+function formatDay(timestamp) {
+let date = new Date(timestamp * 1000);
+let day = date.getDay();
+let days = ["Sunday",
+        "Monday",
+        "Tuesday",
+        "Wednesday",
+        "Thursday",
+        "Friday",
+        "Saturday",];
+return days[day];
+}
+
+function displayForecast (response) {
+  let forecast = response.data.daily;
+
   let forecastElement = document.querySelector("#weather-forecast");
+
   let forecastHTML = `<div class="column">`;
-  let days = ["Mon", "Tue", "Wed"];
-  days.forEach(function(day) {
+  forecast.forEach(function(forecastDay, index) {
+    if (index < 5) {
     forecastHTML = forecastHTML + `<div class="container">
-                <div class="card dayone">
-                  <img class="picdayone" src="media/sun.svg" width="50" />
+                <div class="card forecast-card">
+                  <img class="picdayone" src="https://openweathermap.org/img/wn/${forecastDay.weather[0].icon}@2x.png" width="50" />
                   <h5>
-                    <div>${day}</div>
-                    <span>22℃ - 25℃</span>
+                    <div>${formatDay(forecastDay.dt)}</div>
+                    <span class="min-temp">${Math.round(forecastDay.temp.min)}℃</span> - <span class="max-temp">${Math.round(forecastDay.temp.max)}℃</span>
                   </h5>
                 </div>
               </div>`;
 
-  });
+  }});
   forecast = forecastHTML + `</div>`;
   forecastElement.innerHTML = forecastHTML;
 }
 
-displayForecast();
+function getForecast(coordinates) {
+  let apiKey = "f2d265d56b2ea774781d6a6833201d0a";
+  let apiUrl = `https://api.openweathermap.org/data/2.5/onecall?lat=${coordinates.lat}&lon=${coordinates.lon}&appid=${apiKey}&units=metric`
+  axios.get(apiUrl).then(displayForecast);
+}
 
 function showTemperatureCelsius(response) {
 temperature = Math.round(response.data.main.temp);
@@ -113,6 +133,8 @@ let mainTemperature = document.querySelector("#main-temperature");
 mainTemperature.innerHTML = `${temperature} ℃`;
 let icon = document.querySelector("#icon-main");
 icon.setAttribute("src", `https://openweathermap.org/img/wn/${response.data.weather[0].icon}@2x.png`);
+
+getForecast(response.data.coord);
 }
 
 function changeDetailsCelsius(response) {
