--- a/index.html
+++ b/index.html
@@ -88,13 +88,12 @@
 function formatDay(timestamp) {
 let date = new Date(timestamp * 1000);
 let day = date.getDay();
-let days = ["Sunday",
-        "Monday",
+let days = [        "Monday",
         "Tuesday",
         "Wednesday",
         "Thursday",
         "Friday",
-        "Saturday",];
+        "Saturday", "Sunday"];
 return days[day];
 }
 
@@ -108,7 +107,7 @@ function displayForecast (response) {
     if (index < 5) {
     forecastHTML = forecastHTML + `<div class="container">
                 <div class="card forecast-card">
-                  <img class="picdayone" src="https://openweathermap.org/img/wn/${forecastDay.weather[0].icon}@2x.png" width="50" />
+                  <img class="picdayone" src="https://openweathermap.org/img/wn/${forecastDay.weather[0].icon}@2x.png" width="100" />
                   <h5>
                     <div>${formatDay(forecastDay.dt)}</div>
                     <span class="min-temp">${Math.round(forecastDay.temp.min)}℃</span> - <span class="max-temp">${Math.round(forecastDay.temp.max)}℃</span>
